--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "recoil": "^0.7.4"
+    "recoil": "^0.7.4",
+    "recoil-persist": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
