--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.4",
-    "recoil-persist": "^4.2.0"
+    "recoil-persist": "^4.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
